name:                mmtools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mmtools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       JuicyPixels >= 3.2.6.1
--                      , base >= 4.7 && < 5
--                      , binary >= 0.7.5.0
--                      , vector-binary
--   default-language:    Haskell2010

executable mmtools-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       JuicyPixels >= 3.2.6.1
                     , base
                     , binary >= 0.7.5.0
                     , bytestring
                     , containers
                     , deepseq
                     , freetype2
                     , vector
  default-language:    Haskell2010

test-suite mmtools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       JuicyPixels >= 3.2.6.1
                     , base
                     , binary >= 0.7.5.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mmtools
